# weechat-discord

./: Cargo.toml  README.md  find_token.py
.github/workflows/: ci.yml
parsing/: Cargo.toml
parsing/src/: lib.rs
src/: instance.rs  lib.rs  nicklist.rs  weecord_renderer.rs
src/buffer/: channel.rs  debug.rs  ext.rs  guild.rs  pins.rs
src/config/: guild.rs  mod.rs
src/discord/: custom_commands.rs  discord_connection.rs  plugin_message.rs  typing_indicator.rs
src/hooks/: bar_items.rs  command.rs  completions.rs  signals.rs
src/twilight_utils/: content.rs  member_list.rs  mod.rs
src/twilight_utils/ext/: cache_ext.rs  channel_ext.rs  guild_channel_ext.rs  member_ext.rs  message_ext.rs  mod.rs  user_ext.rs
src/utils/: color.rs  format.rs  image.rs
src/weechat2/: renderer.rs
tests/: cache_test.rs
