[package]
name = "weechat-discord"
version = "0.3.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[workspace]
members = ["parsing", "xtask"]

[lib]
name = "weecord"
crate-type = ["cdylib"]

[features]
default = ["onig"]

syntax_highlighting = ["syntect"]
images = ["image", "term-image", "hyper", "hyper-rustls"]

pcre = ["parsing/pcre"]
onig = ["parsing/onig"]
weecord-debug = ["accountable-refcell"]
unlimited-logging = []
tracing_tree = ["tracing-tree"]

[dependencies.parsing]
path = "parsing"

[dependencies]
anyhow = "1.0.51"
tracing = "0.1.29"
regex = "1.5.4"
once_cell = "1.8.0"
futures = "0.3.18"
rand = "0.8.4"
itertools = "0.10.1"
serde_json = "1.0.72"
parking_lot = "0.11.2"
time = { features = ["macros", "formatting", "local-offset"], git = "https://github.com/time-rs/time" }

[dependencies.hyper]
version = "0.14.15"
optional = true
default-features = false
features = ["client", "runtime"]

[dependencies.hyper-rustls]
version = "0.23.0"
optional = true
default-features = false
features = ["native-tokio", "http1", "http2", "rustls-native-certs"]

[dependencies.image]
version = "0.23.14"
optional = true

[dependencies.term-image]
optional = true
git = "https://github.com/Noskcaj19/term-image"
default-features = false

[dependencies.syntect]
version = "4.6.0"
optional = true
default-features = false
features = ["parsing", "assets", "dump-load", "regex-onig"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.accountable-refcell]
version = "0.2.1"
optional = true

[dependencies.tracing-tree]
version = "0.1.11"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.3"
default_features = false
features = ["fmt", "ansi", "smallvec", "env-filter"]

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread", "sync", "macros", "time"]


[dependencies.discord-emoji]
git = "https://github.com/terminal-discord/discord-emoji"
branch = "main"

[dependencies.weechat-command-parser]
git = "https://github.com/terminal-discord/weechat-command-parser"


[dependencies.weechat]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"
features = ["async", "unsound"]

[dependencies.weechat-sys]
git = "https://github.com/terminal-discord/rust-weechat"
branch = "mk3"

[dependencies.twilight-cache-inmemory]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-gateway]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-http]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-model]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-mention]
git = "https://github.com/terminal-discord/twilight"
branch = "main"

[dependencies.twilight-util]
git = "https://github.com/terminal-discord/twilight"
branch = "main"
features = ["permission-calculator"]
